--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,10 @@
         "beberlei/assert": "^2.8",
         "broadway/broadway": "^2.0",
         "broadway/broadway-bundle": "^0.4.1",
-        "broadway/event-store-dbal": "^0.2.0",
+        "broadway/event-store-dbal": "^0.2.1",
         "league/tactician-bundle": "^1.1",
         "ramsey/uuid": "^3.7",
+        "ramsey/uuid-doctrine": "^1.4",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
@@ -19,6 +20,7 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^4.0",
         "phpunit/phpunit": "^6.5",
         "symfony/browser-kit": "^4.0",
         "symfony/dotenv": "^4.0",
