Event publisher with rmq with inital tests

--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,7 @@ APP_SECRET=c7375619ac26c8671e52279c31c7f157
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
+
+###> php-amqplib/rabbitmq-bundle ###
+RABBITMQ_URL=amqp://guest:guest@localhost:5672
+###< php-amqplib/rabbitmq-bundle ###
