Command -> Query system integration test

--- a/config/packages/league_tactician.yaml
+++ b/config/packages/league_tactician.yaml
@@ -14,3 +14,8 @@ tactician:
             method_inflector: tactician.handler.method_name_inflector.handle
             middleware:
                 - tactician.commandbus.event.middleware.command_handler
+
+        asyncEvent:
+            method_inflector: tactician.handler.method_name_inflector.handle
+            middleware:
+                - tactician.commandbus.asyncEvent.middleware.command_handler
