--- a/.env.dist
+++ b/.env.dist
@@ -10,5 +10,5 @@ APP_SECRET=c7375619ac26c8671e52279c31c7f157
 ###< symfony/framework-bundle ###
 
 ###> php-amqplib/rabbitmq-bundle ###
-RABBITMQ_URL=amqp://guest:guest@localhost:5672
+RABBITMQ_URL=amqp://guest:guest@rmq:5672
 ###< php-amqplib/rabbitmq-bundle ###
