--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -2,4 +2,12 @@ services:
     _defaults:
         public: true
 
+    App\Tests\Infrastructure\Share\Event\InMemoryAsyncEventBusProducer:
+        arguments:
+          $asyncEventBus: '@tactician.commandbus.asyncEvent'
+
     App\Tests\Infrastructure\Share\Bus\EventCollectorMiddleware: ~
+
+    old_sound_rabbit_mq.events_producer:
+      alias: 'App\Tests\Infrastructure\Share\Event\InMemoryAsyncEventBusProducer'
+      
