--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,16 @@ services:
     image: jorge07/alpine-php:7.1-dev-sf
     ports:
       - "2323:22"
-      - "9000:9000"
     volumes:
       - .:/app
     depends_on:
       - mysql
+
+  workers:
+    image: jorge07/alpine-php:7.1-dev-sf
+    volumes:
+      - .:/app
+    command: ['./bin/console', 'rabbitmq:multiple-consumer', 'events']
 
   mysql:
     image: mysql:5.7
@@ -32,6 +37,16 @@ services:
     volumes:
       - db_data:/var/lib/mysql
 
+  rmq:
+    image: rabbitmq:3-management
+    environment:
+      RABBITMQ_ERLANG_COOKIE: "SWQOKODSQALRPCLNMEQG"
+      RABBITMQ_DEFAULT_USER: "guest"
+      RABBITMQ_DEFAULT_PASS: "guest"
+      RABBITMQ_DEFAULT_VHOST: "/"
+    ports:
+      - "15672:15672"
+      - "5672:5672"
 
 volumes:
   db_data:
