--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,12 +16,9 @@
         <env name="SHELL_VERBOSITY" value="-1" />
         <!-- define your env variables for the test env here -->
 
-        <!-- ###+ doctrine/doctrine-bundle ### -->
-        <!-- Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url -->
-        <!-- For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db" -->
-        <!-- Configure your db driver and server_version in config/packages/doctrine.yaml -->
-        <env name="DATABASE_URL" value="mysql://db_user:db_password@127.0.0.1:3306/db_name"/>
-        <!-- ###- doctrine/doctrine-bundle ### -->
+        <!-- ###+ php-amqplib/rabbitmq-bundle ### -->
+        <env name="RABBITMQ_URL" value="amqp://guest:guest@rmq:5672"/>
+        <!-- ###- php-amqplib/rabbitmq-bundle ### -->
     </php>
 
     <testsuites>
