--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "broadway/broadway": "^2.0",
         "broadway/broadway-bundle": "^0.4.1",
         "broadway/event-store-dbal": "^0.2.1",
+        "elasticsearch/elasticsearch": "^6.0",
         "league/tactician-bundle": "^1.1",
         "php-amqplib/rabbitmq-bundle": "^1.14",
         "ramsey/uuid": "^3.7",
