--- a/config/packages/old_sound_rabbit_mq.yaml
+++ b/config/packages/old_sound_rabbit_mq.yaml
@@ -15,8 +15,13 @@ old_sound_rabbit_mq:
             connection:       default
             exchange_options: { name: 'events', type: topic }
             queues:
-                projections_mysql:
-                    name: projections_mysql
+                aync_event_handlers:
+                    name: aync_event_handlers
                     routing_keys:
                         - 'App.Domain.#'
                     callback: App\Infrastructure\Share\Event\Consumer\EventQueueConsumer
+                elastic_events:
+                    name: elastic_events
+                    routing_keys:
+                        - 'App.Domain.#'
+                    callback: App\Infrastructure\Share\Event\Consumer\SendEventsToElasticConsumer
