--- a/config/services.yaml
+++ b/config/services.yaml
@@ -56,6 +56,10 @@ services:
         resource: '../src/UI/Http/Rest/Controller/*'
         tags: [ 'controller.service_arguments' ]
 
+    App\UI\Http\Web\Controller\:
+        resource: '../src/UI/Http/Web/Controller/*'
+        tags: [ 'controller.service_arguments' ]
+
     Broadway\EventStore\Dbal\DBALEventStore:
         public: true
         arguments:
