--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,12 @@
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^4.0",
+        "phpstan/phpstan": "^0.9.2",
         "phpunit/phpunit": "^6.5",
         "symfony/browser-kit": "^4.0",
         "symfony/dotenv": "^4.0",
-        "symfony/profiler-pack": "^1.0",
-        "symfony/phpunit-bridge": "^4.0"
+        "symfony/phpunit-bridge": "^4.0",
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
