--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "broadway/broadway": "^2.0",
         "broadway/broadway-bundle": "^0.4.1",
         "broadway/event-store-dbal": "^0.2.1",
+        "elasticsearch/elasticsearch": "^6.0",
         "league/tactician-bundle": "^1.1",
         "php-amqplib/rabbitmq-bundle": "^1.14",
         "ramsey/uuid": "^3.7",
@@ -22,10 +23,13 @@
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^4.0",
+        "phpstan/phpstan": "^0.9.2",
         "phpunit/phpunit": "^6.5",
         "symfony/browser-kit": "^4.0",
+        "symfony/css-selector": "^4.0",
         "symfony/dotenv": "^4.0",
-        "symfony/phpunit-bridge": "^4.0"
+        "symfony/phpunit-bridge": "^4.0",
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
