--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - rmq
     volumes:
       - .:/app
-    command: ['./bin/console', 'rabbitmq:multiple-consumer', 'events']
+    command: ['/app/bin/console', 'rabbitmq:multiple-consumer', 'events']
 
   mysql:
     image: mysql:5.7
