--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -1,13 +1,23 @@
 services:
     _defaults:
         public: true
+        bind:
+          $elasticConfig: '%elastic%'
 
     App\Tests\Infrastructure\Share\Event\EventCollectorListener:
       public: true
       tags:
           - { name: broadway.domain.event_listener }
 
+    events_to_elastic:
+        class: App\Infrastructure\Share\Event\Consumer\SendEventsToElasticConsumer
+        autowire: true
+
+    events_repository:
+        class: App\Infrastructure\Share\Event\Query\EventElasticRepository
+        autowire: true
+
     App\Tests\Infrastructure\Share\Event\Publisher\InMemoryProducer: ~
-    
+
     old_sound_rabbit_mq.events_producer:
       alias: 'App\Tests\Infrastructure\Share\Event\Publisher\InMemoryProducer'
