Testing to cover UI

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,7 @@
 api_controllers:
     resource: '../src/UI/Http/Rest/Controller/'
     type: annotation
+    prefix: /api
 
 web_controllers:
     resource: '../src/UI/Http/Web/Controller/'
