Add travis integration
Update README.md

Remove domain folder from mappings.

Rename mapping folder.

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -24,15 +24,9 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
         mappings:
-            Domain:
+            Projections:
                 is_bundle: false
                 type: yml
-                dir: '%kernel.project_dir%/config/mapping/orm/domain'
-                prefix: 'App\Domain'
-                alias: Domain
-            Infrastructure:
-                is_bundle: false
-                type: yml
-                dir: '%kernel.project_dir%/config/mapping/orm/infrastructure'
-                prefix: 'App\Infrastructure'
-                alias: Infrastructure
+                dir: '%kernel.project_dir%/config/mapping/orm/projections'
+                prefix: 'App'
+                alias: Projections
