--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,13 @@ before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
+  - wget -c -nc --retry-connrefused --tries=0 https://github.com/php-coveralls/php-coveralls/releases/download/v2.0.0/php-coveralls.phar -O coveralls.phar
+  - chmod +x coveralls.phar
 
 script:
   - make start
-  - sleep 5
   - make style
-  - make phpunit
+  - make conf="--coverage-clover build/logs/clover.xml" phpunit
+
+after_success:
+  - travis_retry php coveralls.phar -v
