--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,14 +50,14 @@ services:
       - "5672:5672"
 
   kibana:
-    image: kibana:5.6
+    image: docker.elastic.co/kibana/kibana:6.2.4
     ports:
       - 5601:5601
     volumes:
       - "./etc/dev/kibana/config:/usr/share/kibana/config"
 
   elasticsearch:
-    image: elasticsearch:5.6
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.2.4
     ports:
       - "9200:9200"
 
