--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,14 +50,14 @@ services:
       - "5672:5672"
 
   kibana:
-    image: kibana:5.6
+    image: docker.elastic.co/kibana/kibana:6.3.0
     ports:
       - 5601:5601
     volumes:
-      - "./etc/dev/kibana/config:/usr/share/kibana/config"
+      - "$PWD/etc/dev/kibana/config:/usr/share/kibana/config/kibana.yml"
 
   elasticsearch:
-    image: elasticsearch:5.6
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.3.0
     ports:
       - "9200:9200"
 
