--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ script:
   - make style
   - make conf="--coverage-clover build/logs/clover.xml" phpunit
   - make schema-validate
+  - make layers
 
 after_success:
   - mkdir -p build/logs
