Add Stateless Auth for API endpoints and user validation in change email

--- a/.env.dist
+++ b/.env.dist
@@ -12,3 +12,10 @@ APP_SECRET=c7375619ac26c8671e52279c31c7f157
 ###> php-amqplib/rabbitmq-bundle ###
 RABBITMQ_URL=amqp://guest:guest@rmq:5672
 ###< php-amqplib/rabbitmq-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=development
+JWT_TTL=604800
+###< lexik/jwt-authentication-bundle ###
