--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,12 +1,29 @@
 security:
+    encoders:
+        bcrypt:
+            algorithm: bcrypt
+            cost: 12
     providers:
         users:
             id: 'App\Infrastructure\User\Auth\AuthProvider'
-                
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        api_auth:
+            pattern:  ^/api/auth
+            stateless: true
+            anonymous: true
+
+        api_secured:
+            pattern:  ^/api
+            provider: users
+            stateless: true
+            guard:
+              authenticators:
+                - lexik_jwt_authentication.jwt_token_authenticator
 
         secured_area:
             provider: users
@@ -22,7 +39,8 @@ security:
               path: /logout
               target: /
 
-
     access_control:
-        - { path: ^/profile/*, roles: ROLE_USER }
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/profile/*,  roles: ROLE_USER                    }
+        - { path: ^/login,      roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/auth,   roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/,       roles: IS_AUTHENTICATED_FULLY       }
