--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,6 +19,13 @@
         <!-- ###+ php-amqplib/rabbitmq-bundle ### -->
         <env name="RABBITMQ_URL" value="amqp://guest:guest@rmq:5672"/>
         <!-- ###- php-amqplib/rabbitmq-bundle ### -->
+
+        <!-- ###+ lexik/jwt-authentication-bundle ### -->
+        <env name="JWT_SECRET_KEY" value="%kernel.project_dir%/config/jwt/private.pem"/>
+        <env name="JWT_PUBLIC_KEY" value="%kernel.project_dir%/config/jwt/public.pem"/>
+        <env name="JWT_PASSPHRASE" value="development"/>
+        <env name="JWT_TTL" value="604800"/>
+        <!-- ###- lexik/jwt-authentication-bundle ### -->
     </php>
 
     <testsuites>
