--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,8 @@
 ###< phpunit/phpunit ###
 
 /report/
-.php_cs.cache
+
+###> friendsofphp/php-cs-fixer ###
+/.php_cs
+/.php_cs.cache
+###< friendsofphp/php-cs-fixer ###
