--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
 
 script:
   - make start
+  - make cs-fixer
   - make style
   - make conf="--coverage-clover build/logs/clover.xml" phpunit
   - make schema-validate
