Add swagger api doc

--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,12 @@
         "elasticsearch/elasticsearch": "^6.0",
         "league/tactician-bundle": "^1.1",
         "lexik/jwt-authentication-bundle": "^2.5",
+        "nelmio/api-doc-bundle": "^3.2",
         "php-amqplib/rabbitmq-bundle": "^1.14",
         "ramsey/uuid": "^3.7",
         "ramsey/uuid-doctrine": "^1.4",
         "sensio/framework-extra-bundle": "^5.1",
+        "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
