--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,6 +12,11 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
+        api_doc:
+            pattern:  ^/api/doc
+            stateless: true
+            anonymous: true
+            
         api_auth:
             pattern:  ^/api/auth
             stateless: true
@@ -43,4 +48,5 @@ security:
         - { path: ^/profile/*,  roles: ROLE_USER                    }
         - { path: ^/login,      roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/auth,   roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/doc,    roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/,       roles: IS_AUTHENTICATED_FULLY       }
