--- a/.env.dist
+++ b/.env.dist
@@ -2,6 +2,8 @@
 # Copy this file to .env file for development, create environment variables when deploying to production
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
+EVENTS_TABLE=events
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=c7375619ac26c8671e52279c31c7f157
