Add new commands to makefile and update documentation.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 
 script:
   - make start
-  - make cs-fixer
+  - make cs-check
   - make style
   - make conf="--coverage-clover build/logs/clover.xml" phpunit
   - make schema-validate
