Add Messenger component and add new buses.

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
         "broadway/broadway-bundle": "^0.4.1",
         "broadway/event-store-dbal": "^0.2.1",
         "elasticsearch/elasticsearch": "^6.0",
-        "league/tactician-bundle": "^1.1",
         "lexik/jwt-authentication-bundle": "^2.5",
         "nelmio/api-doc-bundle": "^3.2",
         "php-amqplib/rabbitmq-bundle": "^1.14",
@@ -22,6 +21,7 @@
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
+        "symfony/messenger": "^4.1",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^4.1",
         "symfony/twig-bundle": "^4.1",
