--- a/.env.dist
+++ b/.env.dist
@@ -19,3 +19,7 @@ JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=development
 JWT_TTL=604800
 ###< lexik/jwt-authentication-bundle ###
+
+###> symfony/messenger ###
+MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+###< symfony/messenger ###
