WIP: New Dockerfile to install php7-amqp and some changes needed.

--- a/.env.dist
+++ b/.env.dist
@@ -21,5 +21,5 @@ JWT_TTL=604800
 ###< lexik/jwt-authentication-bundle ###
 
 ###> symfony/messenger ###
-MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rmq:5672/%2f/elastic_events
 ###< symfony/messenger ###
