--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ext-amqp": "*",
         "ext-iconv": "*",
         "ext-json": "*",
-        "ext-ampq": "*",
         "beberlei/assert": "^2.8",
         "broadway/broadway": "^2.0",
         "broadway/broadway-bundle": "^0.4.1",
@@ -27,6 +27,7 @@
         "symfony/security-bundle": "^4.1",
         "symfony/serializer-pack": "^1.0",
         "symfony/twig-bundle": "^4.1",
+        "symfony/validator": "^4.1",
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
