--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -4,5 +4,15 @@ framework:
             amqp: "%env(MESSENGER_TRANSPORT_DSN)%"
         default_bus: messenger.bus.command
         buses:
-            messenger.bus.command: ~
-            messenger.bus.query: ~
+            messenger.bus.command:
+                middleware:
+                    - messenger.middleware.validation
+                    #- messenger.middleware.handles_recorded_messages: ['@messenger.bus.event']
+                    #- doctrine_transaction_middleware: ['default']
+            messenger.bus.query:
+                middleware:
+                    - messenger.middleware.validation
+            messenger.bus.event:
+                middleware:
+                    - messenger.middleware.allow_no_handler
+                    - messenger.middleware.validation
